# donald-azkg

./: .telegram_state.json  CLAUDE.md  CPU_vs_GPU_Decision_Guide.md  README.md  a2a.md  adding_mcp_to_claude_code.md  adding_to_claude_code.md  agent_mcp_apis.md  agentic_character.md  agentic_crew.md  agentic_crew_implementation.md  agentic_development_context.md  agentic_filmmaking.md  agentic_production_studio.md  agentic_zkg.md  agents.md  agents_moc.md  ai_development_moc.md  ai_filmmaking.md  ai_filmmaking_moc.md  alita.md  arcadian_summers.md  arcadian_summers_cast_and_crew.md  arcadian_summers_narrative_questions.md  arcadian_summers_related_works.md  architecture_moc.md  bayes_theory.md  best_practices.md  build_tools_moc.md  burn.md  cargo.md  category_theory.md  chromadb.md  claude_agent_sdk.md  claude_agent_sdk_examples.md  claude_agent_sdk_production.md  claude_code.md  claude_code_agents.md  claude_code_efficiency_optimization.md  claude_code_hooks.md  (+114 more)
.claude/: commands.md  settings.local.json
.obsidian/: graph.json  workspace.json
agents/: a2a.md  agent_mcp_apis.md  alita.md  debate.md  mcp.md  micro-prompt.md  react.md  sutton.md
attachments/: AI Filmmaking in 2025_ A Comprehensive Overview.md  Windows App SDK AI Namespaces.md
claude_code/: agents.md
cline/: clinerules.md  custom_instructions.md  workflows.md
cpp/: WINDOWS_APP_SDK_SETUP.md  (+3 more)
telegram-reader/: .env.example  .gitignore  README.md  mcp_plugin_setup.md  pyproject.toml  telegram_mcp_troubleshooting.md  telegram_setup_guide.md
telegram-reader/src/telegram_reader/: __init__.py  cli.py
(+117 files in other folders)
